{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 97,
  "lineage": "b890f2d2-7224-9828-3a2a-71fb189227f4",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_linuxvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkInterfaces/lseg-ppr-web-linuxvm-nic",
            "internal_domain_name_suffix": "4wj3q2yhwclulmdg5lpohbfh5f.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-linuxvm-ip-1",
                "primary": true,
                "private_ip_address": "10.0.10.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/virtualNetworks/lseg-ppr-vnet/subnets/lseg-ppr-vnet-websubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus2",
            "name": "lseg-ppr-web-linuxvm-nic",
            "private_ip_address": "10.0.10.4",
            "private_ip_addresses": [
              "10.0.10.4"
            ],
            "resource_group_name": "lseg-ppr-gcrg-lmvyry"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "lseg-ppr-web-linuxvm-nic",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "web_vmnic_nic_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkInterfaces/lseg-ppr-web-linuxvm-nic|/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-web-linuxvm-nic-nsg",
            "network_interface_id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkInterfaces/lseg-ppr-web-linuxvm-nic",
            "network_security_group_id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-web-linuxvm-nic-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-vnet-appsubnet-nsg",
            "location": "eastus2",
            "name": "lseg-ppr-vnet-appsubnet-nsg",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule22",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule443",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule80",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "lseg-ppr-vnet-appsubnet-nsg",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-vnet-bastionsubnet-nsg",
            "location": "eastus2",
            "name": "lseg-ppr-vnet-bastionsubnet-nsg",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule22",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule443",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule80",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "lseg-ppr-vnet-bastionsubnet-nsg",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-vnet-dbsubnet-nsg",
            "location": "eastus2",
            "name": "lseg-ppr-vnet-dbsubnet-nsg",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule22",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule443",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule80",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "lseg-ppr-vnet-dbsubnet-nsg",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-vnet-websubnet-nsg",
            "location": "eastus2",
            "name": "lseg-ppr-vnet-websubnet-nsg",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule22",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule443",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule80",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "lseg-ppr-vnet-websubnet-nsg",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_vmnic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-web-linuxvm-nic-nsg",
            "location": "eastus2",
            "name": "lseg-ppr-web-linuxvm-nic-nsg",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule22",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule443",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule80",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "lseg-ppr-web-linuxvm-nic-nsg",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f"
          },
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "app_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-vnet-appsubnet-nsg/securityRules/Rule80",
            "name": "Rule80",
            "network_security_group_name": "lseg-ppr-vnet-appsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Rule80",
            "network_security_group_name": "lseg-ppr-vnet-appsubnet-nsg",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f"
          },
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-vnet-appsubnet-nsg/securityRules/Rule443",
            "name": "Rule443",
            "network_security_group_name": "lseg-ppr-vnet-appsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Rule443",
            "network_security_group_name": "lseg-ppr-vnet-appsubnet-nsg",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f"
          },
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-vnet-appsubnet-nsg/securityRules/Rule22",
            "name": "Rule22",
            "network_security_group_name": "lseg-ppr-vnet-appsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Rule22",
            "network_security_group_name": "lseg-ppr-vnet-appsubnet-nsg",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f"
          },
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "bastion_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-vnet-bastionsubnet-nsg/securityRules/Rule80",
            "name": "Rule80",
            "network_security_group_name": "lseg-ppr-vnet-bastionsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Rule80",
            "network_security_group_name": "lseg-ppr-vnet-bastionsubnet-nsg",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f"
          },
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-vnet-bastionsubnet-nsg/securityRules/Rule443",
            "name": "Rule443",
            "network_security_group_name": "lseg-ppr-vnet-bastionsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Rule443",
            "network_security_group_name": "lseg-ppr-vnet-bastionsubnet-nsg",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f"
          },
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-vnet-bastionsubnet-nsg/securityRules/Rule22",
            "name": "Rule22",
            "network_security_group_name": "lseg-ppr-vnet-bastionsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Rule22",
            "network_security_group_name": "lseg-ppr-vnet-bastionsubnet-nsg",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f"
          },
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "db_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-vnet-dbsubnet-nsg/securityRules/Rule80",
            "name": "Rule80",
            "network_security_group_name": "lseg-ppr-vnet-dbsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Rule80",
            "network_security_group_name": "lseg-ppr-vnet-dbsubnet-nsg",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f"
          },
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-vnet-dbsubnet-nsg/securityRules/Rule443",
            "name": "Rule443",
            "network_security_group_name": "lseg-ppr-vnet-dbsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Rule443",
            "network_security_group_name": "lseg-ppr-vnet-dbsubnet-nsg",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f"
          },
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-vnet-dbsubnet-nsg/securityRules/Rule22",
            "name": "Rule22",
            "network_security_group_name": "lseg-ppr-vnet-dbsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Rule22",
            "network_security_group_name": "lseg-ppr-vnet-dbsubnet-nsg",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f"
          },
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-vnet-websubnet-nsg/securityRules/Rule80",
            "name": "Rule80",
            "network_security_group_name": "lseg-ppr-vnet-websubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Rule80",
            "network_security_group_name": "lseg-ppr-vnet-websubnet-nsg",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-vnet-websubnet-nsg/securityRules/Rule443",
            "name": "Rule443",
            "network_security_group_name": "lseg-ppr-vnet-websubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Rule443",
            "network_security_group_name": "lseg-ppr-vnet-websubnet-nsg",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-vnet-websubnet-nsg/securityRules/Rule22",
            "name": "Rule22",
            "network_security_group_name": "lseg-ppr-vnet-websubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Rule22",
            "network_security_group_name": "lseg-ppr-vnet-websubnet-nsg",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_vmnic_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-web-linuxvm-nic-nsg/securityRules/Rule80",
            "name": "Rule80",
            "network_security_group_name": "lseg-ppr-web-linuxvm-nic-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Rule80",
            "network_security_group_name": "lseg-ppr-web-linuxvm-nic-nsg",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f"
          },
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-web-linuxvm-nic-nsg/securityRules/Rule443",
            "name": "Rule443",
            "network_security_group_name": "lseg-ppr-web-linuxvm-nic-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Rule443",
            "network_security_group_name": "lseg-ppr-web-linuxvm-nic-nsg",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f"
          },
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-web-linuxvm-nic-nsg/securityRules/Rule22",
            "name": "Rule22",
            "network_security_group_name": "lseg-ppr-web-linuxvm-nic-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Rule22",
            "network_security_group_name": "lseg-ppr-web-linuxvm-nic-nsg",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f"
          },
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_host_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/publicIPAddresses/lseg-ppr-bastion-host-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.110.50.135",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "lseg-ppr-bastion-host-public-ip",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "lseg-ppr-bastion-host-public-ip",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_service_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/publicIPAddresses/lseg-ppr-bastion-service-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.75.87.226",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "lseg-ppr-bastion-service-publicip",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "lseg-ppr-bastion-service-publicip",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.11.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/virtualNetworks/lseg-ppr-vnet/subnets/lseg-ppr-vnet-appsubnet",
            "name": "lseg-ppr-vnet-appsubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "virtual_network_name": "lseg-ppr-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "lseg-ppr-vnet-appsubnet",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f",
            "virtual_network_name": "lseg-ppr-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion_service_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/27"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/virtualNetworks/lseg-ppr-vnet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "virtual_network_name": "lseg-ppr-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "AzureBastionSubnet",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f",
            "virtual_network_name": "lseg-ppr-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastionsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.13.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/virtualNetworks/lseg-ppr-vnet/subnets/lseg-ppr-vnet-bastionsubnet",
            "name": "lseg-ppr-vnet-bastionsubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "virtual_network_name": "lseg-ppr-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "lseg-ppr-vnet-bastionsubnet",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f",
            "virtual_network_name": "lseg-ppr-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dbsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.12.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/virtualNetworks/lseg-ppr-vnet/subnets/lseg-ppr-vnet-dbsubnet",
            "name": "lseg-ppr-vnet-dbsubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "virtual_network_name": "lseg-ppr-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "lseg-ppr-vnet-dbsubnet",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f",
            "virtual_network_name": "lseg-ppr-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.10.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/virtualNetworks/lseg-ppr-vnet/subnets/lseg-ppr-vnet-websubnet",
            "name": "lseg-ppr-vnet-websubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "virtual_network_name": "lseg-ppr-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "lseg-ppr-vnet-websubnet",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f",
            "virtual_network_name": "lseg-ppr-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app_subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/virtualNetworks/lseg-ppr-vnet/subnets/lseg-ppr-vnet-appsubnet",
            "network_security_group_id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-vnet-appsubnet-nsg",
            "subnet_id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/virtualNetworks/lseg-ppr-vnet/subnets/lseg-ppr-vnet-appsubnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_network_security_rule.app_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "bastion_subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/virtualNetworks/lseg-ppr-vnet/subnets/lseg-ppr-vnet-bastionsubnet",
            "network_security_group_id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-vnet-bastionsubnet-nsg",
            "subnet_id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/virtualNetworks/lseg-ppr-vnet/subnets/lseg-ppr-vnet-bastionsubnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_network_security_rule.bastion_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db_subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/virtualNetworks/lseg-ppr-vnet/subnets/lseg-ppr-vnet-dbsubnet",
            "network_security_group_id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-vnet-dbsubnet-nsg",
            "subnet_id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/virtualNetworks/lseg-ppr-vnet/subnets/lseg-ppr-vnet-dbsubnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_network_security_rule.db_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/virtualNetworks/lseg-ppr-vnet/subnets/lseg-ppr-vnet-websubnet",
            "network_security_group_id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-vnet-websubnet-nsg",
            "subnet_id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/virtualNetworks/lseg-ppr-vnet/subnets/lseg-ppr-vnet-websubnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_network_security_rule.web_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "73d893f5-b007-4597-b066-fadee384a7fd",
            "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/virtualNetworks/lseg-ppr-vnet",
            "location": "eastus2",
            "name": "lseg-ppr-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/27"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/virtualNetworks/lseg-ppr-vnet/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.10.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/virtualNetworks/lseg-ppr-vnet/subnets/lseg-ppr-vnet-websubnet",
                "name": "lseg-ppr-vnet-websubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-vnet-websubnet-nsg"
              },
              {
                "address_prefixes": [
                  "10.0.11.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/virtualNetworks/lseg-ppr-vnet/subnets/lseg-ppr-vnet-appsubnet",
                "name": "lseg-ppr-vnet-appsubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-vnet-appsubnet-nsg"
              },
              {
                "address_prefixes": [
                  "10.0.12.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/virtualNetworks/lseg-ppr-vnet/subnets/lseg-ppr-vnet-dbsubnet",
                "name": "lseg-ppr-vnet-dbsubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-vnet-dbsubnet-nsg"
              },
              {
                "address_prefixes": [
                  "10.0.13.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/virtualNetworks/lseg-ppr-vnet/subnets/lseg-ppr-vnet-bastionsubnet",
                "name": "lseg-ppr-vnet-bastionsubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/e30f0459-6bc3-414b-adeb-f05104ae2e3f/resourceGroups/lseg-ppr-gcrg-lmvyry/providers/Microsoft.Network/networkSecurityGroups/lseg-ppr-vnet-bastionsubnet-nsg"
              }
            ],
            "tags": {
              "environment": "ppr",
              "owners": "lseg"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "lseg-ppr-vnet",
            "resource_group_name": "lseg-ppr-gcrg-lmvyry",
            "subscription_id": "e30f0459-6bc3-414b-adeb-f05104ae2e3f"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    }
  ]
}